Quorum/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectNumber.quorum
class Main
    action Main
        number v = 5.0
        Test(v)
    end

    action Test(Object var)
        number v = cast(number, var)
        if v = 5.0
            output "passed"
        end
    end
end
