Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerNumberField.quorum
class Main
    number v = 5.0
    action Main
        Test(v)
    end

    action Test(integer var)
    end
end
